fixed search term matching in tag range result; enabled tag scrolling
- only try to match the search term in the first tag range result
- enabled tag scrolling; somewhat hackish solution, actually scrolling
  an invisible parent container wide enough to contain sideways overlapping
  tag tools, because of a css restriction not to allow a combination
  of overflow-x/y styles "scroll" and "visible" in different dimensions
- added a close button on the top/right corner of the tag selection

--- a/webroot/css/fancy.css
+++ b/webroot/css/fancy.css
@@ -499,9 +499,36 @@ input.entry-tag {
 	padding-top: 2px;
 	border: 1px solid red;
 	border-radius: 10px;
+	position: relative;
+}
+.entry-tags-close-selection-button {
+	width: 0.8em;
+	height: 0.8em;
+	border: 1px solid red;
+	border-radius: 0.4em;
+	background-color: white;
+	position: absolute;
+	top: -0.48em;
+	right: -0.48em;
+	z-index: 10;
+}
+.entry-tags-close-selection-button:hover {
+	width: 1.2em;
+	height: 1.2em;
+	border: 4px solid red;
+	border-radius: 0.8em;
+	background-color: white;
+	top: -0.9em;
+	right: -0.9em;
 }
 .entry-tags-searchbar {
 	display: inline-block;
+}
+.entry-tags-search-result {
+	padding-top: 1em;
+	padding-bottom: 3em;
+}
+.entry-tags-search-result-scroll-container-hack {
 }
 .entry-tags-add-new {
 	display: inline-block;
